--- a/config/.env
+++ b/config/.env
@@ -1,8 +1,7 @@
-NODE_ENV: 'development'
-HOST: '127.0.0.1'
-PORT: '3300'
-
-//DB_URI=mariadb://localhost/javascriptdb
-DB_HOST=localhost
-DB_USER=root
-DB_PASS=s1mpl3
+    NODE_ENV: process.env.NODE_ENV || 'development',
+    HOST: process.env.HOST || '127.0.0.1',
+    PORT: process.env.PORT || '3300'
+    DB_DATABASE: 'delilahResto',
+    DB_USERNAME: 'rootserver',
+    DB_PASSWORD: 'rootserver'
+    DB_DIALECT: 'mysql',
