--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-    NODE_ENV: 'development',
-    HOST: '127.0.0.1',
-    PORT: '3000',
-    DB_DATABASE: 'delilahResto',
-    DB_USERNAME: 'root',
-    DB_PASSWORD: 'rootserver',
-    DB_DIALECT: 'mysql',
-    TOKENSECRET: 'xZ+WxZW<\6r%h(:Q'
+    NODE_ENV=development,
+    HOST=127.0.0.1,
+    PORT=3001,
+    DB_DATABASE=delilahResto,
+    DB_USERNAME=root,
+    DB_PASSWORD=rootserver,
+    DB_DIALECT=mysql,
+    TOKENSECRET=xZ+WxZW<\6r%h(:Q
