--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-    NODE_ENV=development
-    HOST=127.0.0.1
-    PORT=3000
-    DB_DATABASE=delilahResto
-    DB_USERNAME=root
-    DB_PASSWORD=rootserver
-    DB_DIALECT=mysql
-    DB_PORT=3300
-    TOKENSECRET=xZ+WxZW<\6r%h(:Q
+NODE_ENV=development
+HOST=127.0.0.1
+PORT=3000
+DB_DATABASE=DelilahDB
+DB_USERNAME=root
+DB_PASSWORD=rootserver
+DB_DIALECT=mysql
+DB_PORT=3300
+TOKENSECRET=xZ+WxZW<\6r%h(:Q
