--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "path": "^0.12.7",
     "sequelize": "^6.5.0"
   }
